--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Projeto Pixels Art</title>
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <div id="color-palette">
+        <div class="color" id="colorRed"></div>
+        <div class="color" id="colorBlue"></div>
+        <div class="color" id="colorBrown"></div>
+        <div class="color" id="colorViolet"></div>
+    </div>
 </body>
 </html>
