--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color" id="colorBlack"></div>
+        <div class='selected color' id="colorBlack"></div>
         <div class="color" id="colorBlue"></div>
         <div class="color" id="colorGrey"></div>
         <div class="color" id="colorRed"></div>
