--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="color" id="colorGrey"></div>
         <div class="color" id="colorRed"></div>
     </div>
+    <button id="clear-board">Limpar</button>
     <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
