add readme e arrumando css e html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
-    <div id="color-palette">
+    <div id="color-palette" class="palette">
         <div class='selected color' id="colorBlack"></div>
         <div class="color" id="colorBlue"></div>
         <div class="color" id="colorGrey"></div>
         <div class="color" id="colorRed"></div>
     </div>
-    <button id="clear-board">Limpar</button>
     <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
@@ -43,6 +42,7 @@
         <div class="pixel"></div>
         <div class="pixel"></div>
     </div>
+    <button id="clear-board">Limpar</button>
     <script src="script.js"></script>
 </body>
 </html>
